Inline renaming fixes

- Don't use an outdated KFileItem when renaming an item more than once
- Use the same font as the view
- Don't lose the focus when an editor-popup is shown

BUG: 299327
BUG: 298883
BUG: 301253
FIXED-IN: 4.9.0